tests/parser/bad/cmodule-with.scilla
(* Typo *)

scilla_verssion 0

library TestLib

contract Test
